modify root and contrl

--- a/templates/accueil/afficher.html.twig
+++ b/templates/accueil/afficher.html.twig
@@ -8,8 +8,7 @@
 			<b>Bonjour :</b>
 		</h1>
 		<p>
-			Guide Michelin ... trouvez un
-			         restaurant
+			Guide Michelin ... trouvez un restaurant
 		</p>
 	</body>
 </html>
