--- a/templates/accueil/menu.html.twig
+++ b/templates/accueil/menu.html.twig
@@ -7,9 +7,10 @@
 		<h1>
 			<b>Bonjour :</b>
 		</h1>
-		
+		<p>
+			Guide Michelin ... trouvez un restaurant
 
-			<a href="/guideMichelin/menu"> click me accueil !
+			<a href="/guideMichelin/afficher"> retour
 				
 			<br> </a>
 		</p>
